ObjectSelect cleanup - deprecating multi-arg factory methods
that are easily replaced with fluent calls